dragged item is now at correct position
- scrollbar normalization was disabled for sortable components (eg. sortableValues.js)

--- a/packages/framework/src/Resources/styles/admin/core/reset.less
+++ b/packages/framework/src/Resources/styles/admin/core/reset.less
@@ -60,16 +60,13 @@ audio:not([controls]) {
 /*
  * 1. Corrects text resizing oddly in IE6/7 when body font-size is set using em units
  *    http://clagnut.com/blog/348/#c790
- * 2. Keeps page centred in all browsers regardless of content height
- * 3. Prevents iOS text size adjust after orientation change, without disabling user zoom
- *    www.456bereastreet.com/archive/201012/controlling_text_size_in_safari_for_ios_without_disabling_user_zoom/
+ * 2. Prevents iOS text size adjust after orientation change, without disabling user zoom
  */
 
 html {
     font-size: 100%; /* 1 */
-    overflow-y: scroll; /* 2 */
-    -webkit-text-size-adjust: 100%; /* 3 */
-    -ms-text-size-adjust: 100%; /* 3 */
+    -webkit-text-size-adjust: 100%; /* 2 */
+    -ms-text-size-adjust: 100%; /* 2 */
     margin: 0;
     padding: 0;
 }
